--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "hamepage":"http://rost-biletskyy.github.io/react-country-api",
+  "homepage":"http://rost-biletskyy.github.io/react-country-api",
   "name": "ecommerce-website-1",
   "version": "0.1.0",
   "private": true,
